[package]
name = "mull_it_over"
version = "0.1.0"
edition = "2021"

# Optional metadata
authors = ["Gabriel Vautour <gabriel.a.vautour@gmail.com>"]
description = "Advent of Code: Day 3: Mull It Over"
license = "MIT"

[dependencies]
# Add reqwest for HTTP requests
reqwest = { version = "0.11", features = ["json", "blocking"] }

regex = "1"

dotenv = "0.15"